--- a/app/package.json
+++ b/app/package.json
@@ -4,6 +4,7 @@
   "description": "Base element for apps to take flight",
   "main": "./dist/main.js",
   "dependencies": {
+    "async": "^2.4.1",
     "babel-runtime": "^6.23.0",
     "lodash": "^4.17.4",
     "vue": "^2.1.10",
