--- a/package.json
+++ b/package.json
@@ -1,25 +1,35 @@
 {
   "name": "al",
-  "version": "0.0.0",
+  "version": "0.2.0",
+  "author": "Andrew Mitchell <brew@zentri.com>",
   "description": "Base element for apps to take flight",
+  "license": null,
+  "main": "./dist/electron/main.js",
   "scripts": {
-    "build": "npm run pack && build",
-    "build:dir": "npm run pack && build --dir",
-    "dev": "node tasks/runner.js",
+    "build": "node .electron-vue/build.js && electron-builder",
+    "build:dir": "node .electron-vue/build.js && electron-builder --dir",
+    "build:clean": "cross-env BUILD_TARGET=clean node .electron-vue/build.js",
+    "build:web": "cross-env BUILD_TARGET=web node .electron-vue/build.js",
+    "dev": "node .electron-vue/dev-runner.js",
     "e2e": "npm run pack && mocha test/e2e",
-    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter app test",
-    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix app test",
+    "lint": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter src test",
+    "lint:fix": "eslint --ext .js,.vue -f ./node_modules/eslint-friendly-formatter --fix src test",
     "pack": "npm run pack:main && npm run pack:renderer",
-    "pack:main": "cross-env NODE_ENV=production webpack -p --progress --colors --config webpack.main.config.js",
-    "pack:renderer": "cross-env NODE_ENV=production webpack -p --progress --colors --config webpack.renderer.config.js",
+    "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
+    "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
     "test": "npm run unit && npm run e2e",
     "unit": "karma start test/unit/karma.conf.js",
-    "postinstall": "npm run lint:fix && cd app && npm install"
+    "postinstall": "npm run lint:fix"
   },
   "build": {
     "productName": "Al",
     "appId": "org.twoBoots.al",
-    "category": "public.app-category.tools",
+    "directories": {
+      "output": "build"
+    },
+    "files": [
+      "dist/electron/**/*"
+    ],
     "dmg": {
       "contents": [
         {
@@ -35,83 +45,83 @@
         }
       ]
     },
-    "files": [
-      "dist/",
-      "node_modules/",
-      "package.json"
-    ],
     "mac": {
-      "icon": "app/icons/icon.icns"
+      "icon": "build/icons/icon.icns"
     },
     "win": {
-      "icon": "app/icons/icon.ico"
+      "icon": "build/icons/icon.ico"
     },
     "linux": {
-      "target": [
-        "AppImage"
-      ]
+      "icon": "build/icons"
     }
   },
-  "author": "Brew <brew@zentri.com>",
-  "license": "MIT",
+  "dependencies": {
+    "async": "^2.5.0",
+    "axios": "^0.16.1",
+    "less": "^2.7.2",
+    "less-loader": "^4.0.4",
+    "lodash": "^4.17.4",
+    "pug": "^2.0.0-rc.2",
+    "vue": "^2.3.3"
+  },
   "devDependencies": {
-    "babel-core": "^6.8.0",
-    "babel-loader": "^6.2.4",
-    "babel-plugin-transform-runtime": "^6.8.0",
-    "babel-preset-es2015": "^6.6.0",
+    "babel-core": "^6.22.1",
+    "babel-eslint": "^7.0.0",
+    "babel-loader": "^7.0.0",
+    "babel-plugin-istanbul": "^4.1.1",
+    "babel-plugin-transform-runtime": "^6.22.0",
+    "babel-preset-env": "^1.3.3",
     "babel-preset-stage-0": "^6.5.0",
-    "babel-register": "^6.18.0",
-    "babel-runtime": "^6.6.1",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.26.1",
+    "babel-register": "^6.2.0",
+    "babili-webpack-plugin": "^0.1.1",
+    "cfonts": "^1.1.3",
+    "chai": "^4.0.0",
+    "chalk": "^1.1.3",
+    "copy-webpack-plugin": "^4.0.1",
+    "cross-env": "^5.0.0",
+    "css-loader": "^0.28.4",
     "del": "^2.2.1",
     "devtron": "^1.1.0",
-    "electron": "^1.3.1",
+    "electron": "^1.6.11",
+    "electron-builder": "^19.10.0",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.0.1",
-    "electron-builder": "^11.4.4",
-    "electron-rebuild": "^1.1.3",
-    "babel-eslint": "^7.0.0",
     "eslint": "^3.13.1",
-    "eslint-friendly-formatter": "^2.0.5",
+    "eslint-config-airbnb-base": "^11.2.0",
+    "eslint-friendly-formatter": "^3.0.0",
+    "eslint-import-resolver-webpack": "^0.8.1",
     "eslint-loader": "^1.3.0",
     "eslint-plugin-html": "^2.0.0",
-    "eslint-config-airbnb-base": "^3.0.1",
-    "eslint-plugin-import": "^1.8.1",
+    "eslint-plugin-import": "^2.2.0",
     "extract-text-webpack-plugin": "^2.0.0-beta.4",
-    "file-loader": "^0.9.0",
+    "file-loader": "^0.11.1",
     "html-webpack-plugin": "^2.16.1",
+    "inject-loader": "^3.0.0",
     "json-loader": "^0.5.4",
-    "babel-plugin-istanbul": "^3.1.2",
-    "inject-loader": "^2.0.1",
     "karma": "^1.3.0",
     "karma-chai": "^0.1.0",
     "karma-coverage": "^1.1.1",
     "karma-electron": "^5.1.1",
     "karma-mocha": "^1.2.0",
     "karma-sourcemap-loader": "^0.3.7",
-    "karma-spec-reporter": "0.0.26",
+    "karma-spec-reporter": "^0.0.31",
     "karma-webpack": "^2.0.1",
-    "webpack-merge": "^2.4.0",
-    "require-dir": "^0.3.0",
-    "spectron": "^3.4.0",
-    "chai": "^3.5.0",
     "mocha": "^3.0.2",
-    "style-loader": "^0.13.1",
-    "tree-kill": "^1.1.0",
+    "multispinner": "^0.2.1",
+    "require-dir": "^0.3.0",
+    "spectron": "^3.7.1",
+    "style-loader": "^0.18.1",
     "url-loader": "^0.5.7",
-    "vue-hot-reload-api": "^2.0.7",
+    "vue-electron": "^1.0.6",
     "vue-html-loader": "^1.2.2",
-    "vue-loader": "^10.0.2",
-    "vue-style-loader": "^1.0.0",
-    "vue-template-compiler": "^2.1.10",
+    "vue-loader": "^12.2.1",
+    "vue-router": "^2.7.0",
+    "vue-style-loader": "^3.0.1",
+    "vue-template-compiler": "^2.3.3",
+    "vuex": "^2.3.1",
     "webpack": "^2.2.1",
-    "webpack-dev-server": "^2.3.0"
-  },
-  "dependencies": {
-    "async": "^2.4.1",
-    "less": "^2.7.2",
-    "less-loader": "^4.0.3",
-    "lodash": "^4.17.4"
+    "webpack-dev-server": "^2.3.0",
+    "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.0"
   }
 }
