--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "al",
+  "name": "hg",
   "version": "0.2.0",
   "author": "Andrew Mitchell <brew@zentri.com>",
   "description": "Base element for apps to take flight",
@@ -22,8 +22,8 @@
     "postinstall": "npm run lint:fix"
   },
   "build": {
-    "productName": "Al",
-    "appId": "org.twoBoots.al",
+    "productName": "Hg",
+    "appId": "org.twoBoots.hg",
     "directories": {
       "output": "build"
     },
@@ -86,6 +86,7 @@
     "electron-builder": "^19.10.0",
     "electron-debug": "^1.1.0",
     "electron-devtools-installer": "^2.0.1",
+    "electron-settings": "^3.1.1",
     "eslint": "^3.13.1",
     "eslint-config-airbnb-base": "^11.2.0",
     "eslint-friendly-formatter": "^3.0.0",
@@ -110,6 +111,7 @@
     "multispinner": "^0.2.1",
     "require-dir": "^0.3.0",
     "spectron": "^3.7.1",
+    "state-machine": "twoBoots/javascript-state-machine#vue-dist",
     "style-loader": "^0.18.1",
     "url-loader": "^0.5.7",
     "vue-electron": "^1.0.6",
